Seller Login Completed. Right align has to be solved.

--- a/CSS/Seller.css
+++ b/CSS/Seller.css
@@ -70,7 +70,7 @@
     padding-top: 20%;
     width: 40%;
     margin-left: 30%;
-    margin-right: 35%
+    margin-right: 40%
     /*alignment: center;*/
     /*margin-left: 30%;*/
 }
@@ -83,6 +83,15 @@
     padding-bottom: 10%;
     padding-top: 10%;
     width: 100%;
+}
+
+#sellerSignUpText{
+    border: 0;
+    padding: 0;
+    font-size: 25px;
+    background-color: white;
+    text-align: center;
+
 }
 
 #dataArea{
